bug fix alt lines overlapping

--- a/styles.scss
+++ b/styles.scss
@@ -54,7 +54,7 @@ body { font-family: 'source sans pro', sans-serif; height: 100%; width: 100%; }
 		height: 100%;
 		border: $border-size solid black;
 		position: relative;
-		
+		z-index: 2;
 		span { 
 			padding-left: $font-size / 2; 
 			&:last-child { padding-right: $font-size / 2; }
@@ -86,7 +86,7 @@ body { font-family: 'source sans pro', sans-serif; height: 100%; width: 100%; }
 		
 	}
 	// Controls the line left-side line of a match
-	&.alt { left: (($match-spacing / 2))* -1; }
+	&.alt { left: (($match-spacing / 2))* -1; z-index: 1;}
 }
 
 // Make the line go upwards on even-lined matches
